# UABA1-2-TA-MB-automata

./: .gitignore  CMakeLists.txt  DFA.cpp  DFA.h  main.cpp
automata_json/: DFA10.json  DFA11.json  DFA2.json  DFA3.json  DFA8.json  ENFA2.json  NFA3.json
gtest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h  gtest_prod.h
gtest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
src/: Alphabet.cpp  Alphabet.h  AutomataUtils.cpp  Automaton.cpp  Automaton.h  CFG.cpp  CFG.h  DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  NFA.cpp  NFA.h  RE.cpp  RE.h  main.cpp  zipfiles.sh
src/testing/: AutomataTests.cpp
